--- a/mars_colonization/tictactoe/templates/index.html
+++ b/mars_colonization/tictactoe/templates/index.html
@@ -22,8 +22,9 @@
 
 <div class="error">
   <div class="error__title">ENTERTAIN THE CREW Project</div>
-  <div class="error__subtitle">The astronauts have begun the mission</div>
-  <div class="error__description">But there's a long way to go...Lets keep them entertained!</div>
+  <div class="error__subtitle">By Team Calderon(Himanshu Pandey and Ayush Upadhyay)</div>
+  <div class="error__subtitle" style="color:#02ed6c;">The astronauts have begun the mission</div>
+  <div class="error__description" style="color:#cb6ae6;">But there's a long way to go...Lets keep them entertained!</div>
   <button class="error__button error__button--active"onclick="window.location.href={% url 'form' %}">PLAY</button>
   <button class="error__button error__button--active"onclick="window.location.href={% url 'info' %}">DETAILS</button>
 </div>
