--- a/mars_colonization/tictactoe/templates/minimax_4.html
+++ b/mars_colonization/tictactoe/templates/minimax_4.html
@@ -71,9 +71,10 @@
 			&nbsp
 	<select class="form-control" id="algo" name="algo">
 		<option value=""></option>
-		<option value="Minimax">Minimax Algorithm</option>
-		<option value="NN">Neural Network Based Algorithm</option>
-		<option value="Logic">Logic Based Algorithm</option>
+		<option value="Minimax">TicTacToe using Minimax Algo.</option>
+		<option value="NN">TicTacToe using Neural Networks</option>
+		<option value="Logic">TicTacToe using Logic Based Algo.</option>
+		<option value="Reverse">Reverse TicTacToe using Minimax Algo.</option>
 	</select>
 </div>
 <div class="form-group" id="gridsize">
