--- a/mars_colonization/tictactoe/static/css/style2.css
+++ b/mars_colonization/tictactoe/static/css/style2.css
@@ -1,103 +1,428 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,700");
+
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans");
+
 :root {
   --blue: #0e0620;
   --white: #fff;
   --green: #2ccf6d;
 }
 
-html,
 body {
-  height: 100%;
-  width: 100%;
-  margin: 0px;
-  background: linear-gradient(90deg, #2f3640 23%, #181b20 100%);
-}
-
-body {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
-  font-family: "Nunito Sans";
-  color: #697b94;
-  font-size: 1em;
-}
-
-button {
-  font-family: "Nunito Sans";
-}
-
-ul {
-  list-style-type: none;
-  -webkit-padding-start: 35px;
-          padding-inline-start: 35px;
-}
-
-svg {
-  width: 100%;
-  visibility: hidden;
-}
-
-h1 {
-  font-size: 4em;
-  margin: 15px 0px;
-  font-weight: bold;
-}
-
-h2 {
-  font-weight: bold;
-}
-
-.hamburger-menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 35px;
-  z-index: 2;
-}
-.hamburger-menu button {
-  position: relative;
-  width: 30px;
-  height: 22px;
-  border: none;
-  background: none;
-  padding: 0;
-  cursor: pointer;
-}
-.hamburger-menu button span {
-  position: absolute;
-  height: 3px;
-  background: #000;
-  width: 100%;
-  left: 0px;
-  top: 0px;
-  -webkit-transition: 0.1s ease-in;
-  transition: 0.1s ease-in;
-}
-.hamburger-menu button span:nth-child(2) {
-  top: 9px;
-}
-.hamburger-menu button span:nth-child(3) {
-  top: 18px;
-}
-.hamburger-menu [data-state="open"] span:first-child {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  top: 10px;
-}
-.hamburger-menu [data-state="open"] span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
-}
-.hamburger-menu [data-state="open"] span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: 10px;
-}
+	height: 100%;
+	width: 100%;
+	margin: 0px;
+	background: linear-gradient(90deg, #2f3640 23%, #181b20 100%);
+  }
 
 
+
+ header{
+	 color: peru;
+ }
+	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+		display: block;
+	}
+
+	body {
+		line-height: 1;
+	}
+
+	ol, ul {
+		list-style: none;
+	}
+
+	blockquote, q {
+		quotes: none;
+	}
+
+	blockquote:before, blockquote:after, q:before, q:after {
+		content: '';
+		content: none;
+	}
+
+	table {
+		border-collapse: collapse;
+		border-spacing: 0;
+	}
+
+	body {
+		-webkit-text-size-adjust: none;
+	}
+
+/* Box Model */
+
+	*, *:before, *:after {
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+	}
+
+/* Containers */
+
+	.container {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.container.\31 25\25 {
+		width: 100%;
+		max-width: 100em;
+		min-width: 80em;
+	}
+
+	.container.\37 5\25 {
+		width: 60em;
+	}
+
+	.container.\35 0\25 {
+		width: 40em;
+	}
+
+	.container.\32 5\25 {
+		width: 20em;
+	}
+
+	.container {
+		width: 80em;
+	}
+
+
+/* Grid */
+
+
+
+
+
+
+
+
+/* Type */
+
+
+
+	body, input, select, textarea {
+		font-family: "Raleway", Arial, Helvetica, sans-serif;
+		font-size: 14pt;
+		font-weight: 300;
+		letter-spacing: 0.09em;
+		line-height: 1.65em;
+	}
+
+		@media screen and (max-width: 1680px) {
+
+			body, input, select, textarea {
+				font-size: 12pt;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			body, input, select, textarea {
+				font-size: 12pt;
+			}
+
+		}
+
+		@media screen and (max-width: 980px) {
+
+			body, input, select, textarea {
+				font-size: 12pt;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			body, input, select, textarea {
+				font-size: 11pt;
+			}
+
+		}
+
+		@media screen and (max-width: 480px) {
+
+			body, input, select, textarea {
+				font-size: 11pt;
+			}
+
+		}
+
+	a {
+		text-decoration: underline;
+	}
+
+		a:hover {
+			text-decoration: none;
+		}
+
+	strong, b {
+		font-weight: 700;
+	}
+
+	em, i {
+		font-style: italic;
+	}
+
+	p {
+		margin: 0 0 2em 0;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		font-weight: 300;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+		text-transform: uppercase;
+		color: #989e9e
+	}
+
+		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+			color: inherit;
+			text-decoration: none;
+		}
+
+	h2 {
+		font-size: 1.6em;
+		line-height: 1.5em;
+	}
+
+	h3 {
+		font-size: 1.2em;
+		line-height: 1.5em;
+	}
+
+	h4 {
+		font-size: 1em;
+		line-height: 1.5em;
+	}
+
+	h5 {
+		font-size: 0.9em;
+		line-height: 1.5em;
+	}
+
+
+
+	label {
+		display: block;
+		font-size: 0.9em;
+		margin: 0 0 0.2em 0;
+		text-transform: uppercase;
+	}
+
+
+	section.special, article.special, header.special {
+		text-align: center;
+	}
+
+	header {
+		margin-bottom: 1em;
+	}
+
+		header p {
+			position: relative;
+			margin: 0 0 1.5em 0;
+			text-transform: uppercase;
+		}
+
+		header h2, header h3 {
+			display: inline-block;
+			padding-bottom: 0.4em;
+			border-bottom-style: double;
+			border-bottom-width: 4px;
+		}
+
+
+
+/* Table */
+
+	.table-wrapper {
+		-webkit-overflow-scrolling: touch;
+		overflow-x: auto;
+	}
+
+	table {
+		margin: 0 0 2em 0;
+		width: 100%;
+	}
+
+		table tbody tr {
+			border: solid 1px;
+			border-left: 0;
+			border-right: 0;
+		}
+
+		table td {
+			padding: 0.75em 0.75em;
+		}
+
+		table th {
+			font-size: 0.9em;
+			font-weight: 700;
+			padding: 0 0.75em 0.75em 0.75em;
+			text-align: left;
+		}
+
+		table thead {
+			border-bottom: solid 2px;
+		}
+
+		table tfoot {
+			border-top: solid 2px;
+		}
+
+		table.alt {
+			border-collapse: separate;
+		}
+
+			table.alt tbody tr td {
+				border: solid 1px;
+				border-left-width: 0;
+				border-top-width: 0;
+			}
+
+				table.alt tbody tr td:first-child {
+					border-left-width: 1px;
+				}
+
+			table.alt tbody tr:first-child td {
+				border-top-width: 1px;
+			}
+
+			table.alt thead {
+				border-bottom: 0;
+			}
+
+			table.alt tfoot {
+				border-top: 0;
+			}
+
+	table tbody tr {
+		border-color: #e3e3e3;
+	}
+
+		table tbody tr:nth-child(2n + 1) {
+			background-color: rgba(144, 144, 144, 0.075);
+		}
+
+	table th {
+		color: #555;
+	}
+
+	table thead {
+		border-bottom-color: #e3e3e3;
+	}
+
+	table tfoot {
+		border-top-color: #e3e3e3;
+	}
+
+	table.alt tbody tr td {
+		border-color: #e3e3e3;
+	}
+
+/* Feature */
+
+	.features {
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		margin-bottom: 2em;
+	}
+
+	.feature {
+		padding: 2em 2em 0.1em 2em;
+		border-style: solid;
+		border-width: 1px;
+		margin-left: -1px;
+		margin-top: -1px;
+		width: 33.33333%;
+	}
+
+		.feature .fa {
+			font-size: 2.8em;
+			margin-bottom: 0.7em;
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			.feature {
+				padding: 2em 1.5em 0.1em 1.5em;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.feature {
+				padding: 2em 1em 0.1em 1em;
+				width: 50%;
+			}
+
+		}
+
+		@media screen and (max-width: 480px) {
+
+			.feature {
+				padding: 2em 0.5em 0.1em 0.5em;
+				width: 100%;
+			}
+
+		}
+
+	.feature {
+		border-color: #e3e3e3;
+	}
+
+		.feature .fa-gears {
+			color: #e3e3e3;
+		}
+		.feature .fa-warning{
+			color: brown;
+		}
+		.feature .fa-wrench{
+			color: lightslategray;
+		}
+        .feature .fa-lightbulb-o{
+			color: gold;
+		}
+		.feature .fa-group{
+			color: indianred;
+		}
+		.feature .fa-refresh{
+			color: aquamarine;
+		}
+/* Wrapper */
+
+	.wrapper {
+		padding: 6em 0 4em 0;
+		position: relative;
+	}
+
+		.wrapper > .inner {
+			margin: 0 auto;
+			width: 65em;
+		}
+
+			.wrapper > .inner.narrow {
+				width: 35em;
+			}
+
+p{
+	color: #e3e3e3;
+
+}
 .btn {
   z-index: 1;
   overflow: hidden;
@@ -137,15 +462,4 @@ h2 {
 }
 .btn.green:hover:before {
   width: 100%;
-}
-
-@media screen and (max-width: 768px) {
-  body {
-    display: block;
-  }
-
-  .container {
-    margin-top: 70px;
-    margin-bottom: 70px;
-  }
 }
