--- a/mars_colonization/tictactoe/templates/index.html
+++ b/mars_colonization/tictactoe/templates/index.html
@@ -5,9 +5,17 @@
   <meta charset="UTF-8">
   <title>Mars Colonisation Mission</title>
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"><link rel="stylesheet" href="{% static 'css/style0.css' %}">
-
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script>
+    $(window).on("load",function(){
+      $(".loader-wrapper").fadeOut("slow");
+    });
+</script>
 </head>
 <body>
+  <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
 <!-- partial:index.partial.html -->
 <div class="moon"></div>
 <div class="moon__crater moon__crater1"></div>
@@ -23,8 +31,8 @@
 <div class="error">
   <div class="error__title">ENTERTAIN THE CREW Project</div>
   <div class="error__subtitle">By Team Calderon(Himanshu Pandey and Ayush Upadhyay)</div>
-  <div class="error__subtitle" style="color:#02ed6c;">The astronauts have begun the mission</div>
-  <div class="error__description" style="color:#cb6ae6;">But there's a long way to go...Lets keep them entertained!</div>
+  <div class="error__subtitle" style="color:#969FB8;">The astronauts have begun the mission</div>
+  <div class="error__description" style="color:#969FB8;">But there's a long way to go...Lets keep them entertained!</div>
   <button class="error__button error__button--active"onclick="window.location.href={% url 'form' %}">PLAY</button>
   <button class="error__button error__button--active"onclick="window.location.href={% url 'info' %}">DETAILS</button>
 </div>
